Restructure draft + add process diagram

--- a/src/content/ideas/2022/search-engine-fundamentals/index.mdx
+++ b/src/content/ideas/2022/search-engine-fundamentals/index.mdx
@@ -4,7 +4,7 @@ description: 'Essential terms and concepts of how search works. Queries, indexes
 date: '2022-11-20'
 status: 'complete'
 type: 'article'
-tags: ['algorithms', 'information-retrieval', 'NLP', 'search']
+tags: ['algorithms', 'information-retrieval', 'NLP', 'search', 'data-science']
 category: ['budding']
 media_subpath: '/ideas/search-engine-fundamentals'
 draft: false
